--- a/Mycss.css
+++ b/Mycss.css
@@ -1,5 +1,7 @@
 .myclass{
         color: aqua;
+        margin: 0;
+        padding: 0;
         background-color: rgb(0, 0, 0);
         border-radius: 50px;
         text-align: center;
@@ -14,4 +16,19 @@
      font-size: larger;
      text-align: center;
 
+}
+a:visited {
+        color: rgb(2, 1, 24);
+        background-color: transparent;
+        text-decoration: none;
+      }
+      
+a:hover {
+        color: rgb(252, 0, 0);
+        text-decoration: none;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-size: 20px;
+}
+a {
+        color: black;
 }
